[project]
name = "pyddnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.3",
    "numpy>=2.4.0",
    "twmap>=0.6.6",
    # "twnet-parser",
]

# [tool.uv.sources]
# twnet-parser = { path = "../twnet_parser", editable = true }
